# VTX

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  IconsAuthors.txt  NOTES.md  README.md  _cmake.bat  _cmake_build_release.bat  _conan_editable_add_all.bat  _conan_editable_remove_all.bat  _conan_export_all.bat  _linux_build_VTX_command.sh  _linux_build_VTX_prompt.sh  _linux_cmake_production.sh  _pull_and_cmake.bat  _windows_build_installer.nsi  _windows_cmake.bat  _windows_cmake_build_libs.bat  _windows_cmake_production.bat  clean_VS2019_solution.bat  cmake_VS2019_x64.bat  cmake_build_linux_x64.sh  cmake_install.cmake  cmake_windows_production.bat  conanfile.py  conanprofile  install.bat  license.txt  pull_and_cmake_windows.bat  remove_build_folders.bat  run_cmake.bat  workspace.code-workspace
app/bench/: CMakeLists.txt  conanfile.py
app/bench/cmake/: library.cmake
app/bench/shaders/: glow.frag  layout_uniforms_model.glsl  layout_uniforms_representation.glsl  pixelize.frag  sao.frag  shading.frag  ssao.frag
app/bench/shaders/cubemap/: cubemap.frag
app/bench/shaders/cylinder/: cylinder.frag  cylinder.geom  cylinder.vert  struct_geometry_shader.glsl  struct_vertex_shader.glsl
app/bench/shaders/line/: line.frag
app/bench/shaders/ribbon/: ribbon_patch.frag  ribbon_patch.tesc  ribbon_patch.tese  ribbon_patch.vert  (+1 more)
app/bench/src/: camera.hpp  input_manager.hpp  main.cpp  scene.cpp  scene.hpp  user_interface.cpp  user_interface.hpp  util.cpp  util.hpp
app/vtx/: CHANGELOG.md  CMakeLists.txt  README.md  _windows_build_installer.nsi  conanfile.py  license.txt
app/vtx/cmake/: library.cmake
app/vtx/src/: main.cpp
dev/: CMakeLists.txt  conanfile.py
lib/app/: CMakeLists.txt  conanfile.py
lib/app/app/: default_values.cpp  default_values.hpp
lib/app/cmake/: library.cmake
lib/app/data/: 1NIM.mmtf
lib/app/old/: network.hpp  vtx_app.cpp
lib/app/test/: CMakeLists.txt  actions.cpp  conanfile.py  entt.cpp  entt.ixx  main.cpp  molecule.cpp  monitoring.cpp  scene.cpp  selection.cpp  serialization.cpp  settings.cpp  system.cpp  test.ixx  test_utils.cpp  test_utils.hpp  test_utils.ixx  trajectories.cpp  trajectories.ixx  uid.cpp  vtx_python_api_selection.cpp  workers.cpp
lib/core/: CMakeLists.txt  conanfile.py
lib/core/cmake/: library.cmake
lib/core/core/: bond.hpp  chain.cpp  chain.hpp
lib/io/: CMakeLists.txt  conanfile.py
lib/io/cmake/: library.cmake
lib/io/data/: 1idx.cif  1ii1.cif  1qe7.cif  202d.cif  8OIT.mmtf
lib/io/test/: CMakeLists.txt  _fwd.hpp  conanfile.py  define.cpp  define.hpp  fill_molecule.cpp  fill_molecule.hpp  main.cpp
lib/launcher/: CMakeLists.txt
lib/launcher/launcher/: include_tool.hpp  main.cpp  vtx_tool.hpp  vtx_tool_include.hpp
lib/old/: CMakeLists.txt
lib/old/old/: define.hpp  id.hpp  main.cpp  qt_plugins.cpp  setting.cpp  setting.hpp  spec.hpp  style.hpp  vtx_app.cpp  vtx_app.hpp
lib/python_binding/: CMakeLists.txt  conanfile.py
lib/python_binding/cmake/: add_compile_option_recursively.cmake  library.cmake  set_target_property_recursively.cmake  vtx_python_binding_copy_files.cmake
lib/python_binding/module/: vtx_module.cpp
lib/python_binding/python_script/: pytx_init_command.py  vtx_module_init.py  vtx_module_init_no_opengl.py
lib/python_binding/src/: interpretor.cpp
lib/python_binding/test/: CMakeLists.txt  conanfile.py  external_tool.cpp  python_binding.cpp  vtx_api.cpp  vtx_api_selection.cpp
lib/renderer/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
lib/renderer/bench/: CMakeLists.txt  camera.hpp  conanfile.py  input_manager.hpp  main.cpp  ui.hpp  user_interface.hpp  util.hpp
lib/renderer/cmake/: copy_shaders.cmake  library.cmake
lib/renderer/old/: chrono.hpp  enum_bench_item.hpp  opengl_renderer.hpp  ribbon.cpp  ribbon.hpp  struct_buffer_meshes.hpp  triangle.hpp  vertex_array.hpp
lib/renderer/renderer/: mask.hpp
lib/renderer/shaders/: blur.frag  bmgtao.frag  chromatic_aberration.frag  colorize.frag  constant.glsl  crt.frag  debug.frag  default.vert  fxaa.frag  hbao.frag  layout_uniforms_camera.glsl  layout_uniforms_color.glsl  layout_uniforms_model.glsl  layout_uniforms_representation.glsl  linearize_depth.frag  scale.frag  scale_rgba.frag  selection.frag  shading.frag  ssao.frag  ssao_line.frag  struct_data_packed.glsl
lib/renderer/src/: glad.c  main.cpp
lib/renderer/test/: CMakeLists.txt  conanfile.py  main.cpp
lib/tool/: CMakeLists.txt  conanfile.py
lib/tool/cmake/: library.cmake  qt_helper.cmake
lib/tool/data/: tool_config.json
lib/tool/test/: CMakeLists.txt  conanfile.py
lib/ui/: CMakeLists.txt  conanfile.py
lib/ui/cmake/: library.cmake  qt_helper.cmake
lib/ui/old/: vtx_app.hpp
lib/ui/qt/: CMakeLists.txt  conanfile.py
lib/ui/src/: ui_generator.cpp
lib/ui/test/: CMakeLists.txt  conanfile.py
lib/ui/ui/: environment.hpp  id.hpp  ui_generator.hpp
lib/util/: CMakeLists.txt  conanfile.py  conanfile.txt
lib/util/cmake/: configure-target.cmake  configure_target.cmake  copy_registration.cmake  library.cmake
lib/util/include/: logger.hpp
lib/util/src/: chrono.cpp  filepath.hpp  filesystem.cpp  logger.cpp  main.cpp  string.cpp  string.hpp
lib/util/test/: CMakeLists.txt  base_static_singleton.cpp  collection.cpp  conanfile.py  concepts.cpp  enum.cpp  exception.cpp  hashing.cpp  history_browser.cpp  json.cpp  logger.cpp  main.cpp  network.cpp  range_list.cpp  string.cpp  url.cpp
lib/util/util/: chrono.cpp  chrono.hpp  constants.hpp  exception.hpp  exceptions.hpp  filepath.hpp  filesystem.cpp  filesystem.hpp  logger.cpp  logger.hpp  math.hpp  string.cpp  string.hpp  time.hpp  types.hpp
tool/example/: CMakeLists.txt  conanfile.py
tool/example/asset/: tool_example_style.css
tool/example/cmake/: library.cmake
tool/example/src/: example.cpp
tool/example/test/: main.cpp
tool/mdprep/: CMakeLists.txt  conanfile.py
tool/mdprep/cmake/: library.cmake
tool/mdprep/data/: icon_mainButton.xcf
tool/mdprep/src/: mdprep.cpp
tool/mdprep/test/: CMakeLists.txt  conanfile.py
(+7620 files in other folders)
